# Beast-CPP

./: .gitignore  README.md
.github/workflows/: release-windows.yml
cpp/: CMakeLists.txt
cpp/include/beast/engine/: engine.hpp  uci_protocol.hpp
cpp/include/beast/heuristics/: classical_heuristic.hpp  neural_network.hpp  random_heuristic.hpp
cpp/include/beast/heuristics/infra/: heuristic.hpp  heuristic_type.hpp  piece_values.hpp
cpp/include/beast/infra/: concurrent_queue.hpp  constants.hpp  control_state.hpp  engine_command.hpp  search_options.hpp
cpp/include/beast/neural_networks/: net_input_factory.hpp  net_input_v1.hpp  net_input_v2.hpp  net_input_version.hpp
cpp/src/: main.cpp
cpp/src/engine/: engine.cpp  uci_protocol.cpp
cpp/src/heuristics/: classical_heuristic.cpp  heuristic.cpp  neural_network.cpp  random_heuristic.cpp
cpp/src/infra/: search_options.cpp
cpp/src/neural_networks/: net_input_factory.cpp  net_input_v1.cpp  net_input_v2.cpp
